--- a/Grit/styles1.css
+++ b/Grit/styles1.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 .container{
-    background-color: #f49b9b;
+    background-color: #053005;
 }
 body{
     font-family: trirong;
@@ -14,12 +14,16 @@ body{
 }
 h1{
     text-align: center;
-}
+}/*h3{
+    display: inline-block;
+    margin: 0px;
+    padding: 2em;
+}*/
 fieldset{
     margin: auto;
     padding: 2em;
     border-radius: 15px;
-    border: solid 1px #f49b9b;
+    border: solid 1px #053005;
     width: 500px;
     max-width: 100%;
     height: 35em;
@@ -52,7 +56,7 @@ input[type=radio]{
 }
 .submit{
     border-radius: 10px;
-    background-color: #f49b9b;
+    background-color: #053005;
     font-family: trirong;
     margin: auto;
     margin-top: 0;
@@ -60,7 +64,7 @@ input[type=radio]{
     text-align: center;
     width: 100px;
     text-shadow: none;
-    border: 1px solid #f49b9b;
+    border: 1px solid #053005;
     
      
 }
@@ -70,14 +74,14 @@ input[type=submit]{
     padding: 10px 12px;
     margin: 4px 2px;
     cursor: pointer;
-    background-color: #f49b9b;
+    background-color: #053005;
 }
 input[type=text] {
     width: 100%;
     padding: 9px 15px;
     margin: 6px 0;
     box-sizing: border-box;
-    border: 2px solid #f49b9b;
+    border: 2px solid #053005;
     border-radius: 4px;
 
 }
@@ -85,7 +89,7 @@ input[type=number]{
     width: 100%;
     padding: 9px;
     margin: 6px 0;
-    border: 2px solid #f49b9b;
+    border: 2px solid #053005;
     border-radius: 4px;
 }
 input[type=Email]{
@@ -93,7 +97,7 @@ input[type=Email]{
     padding: 9px;
     margin: 6px 0;
     box-sizing: border-box;
-    border: 2px solid #f49b9b;
+    border: 2px solid #053005;
     border-radius: 4px;
 }
 input[type=Password]{
@@ -101,6 +105,6 @@ input[type=Password]{
     padding: 9px;
     margin: 6px 0;
     box-sizing: border-box;
-    border: 2px solid #f49b9b;
+    border: 2px solid #053005;
     border-radius: 4px;
 }
